# ProveIt

./: ACCESSIBLE_PROOF_INTERFACE.md  ARCHITECTURE.md  BRANCH_STRUCTURE.md  CODEBASE_OVERVIEW.md  CONTRIBUTING.md  Cargo.toml  DESIGN_UX.md  DOCUMENTATION_INDEX.md  EXPLORATION_SUMMARY.txt  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  INSIGHTS.md  KAN_IMPLEMENTATION_COMPLETE.md  MATHEMATICAL_FOUNDATION.md  PROOF_O1.md  QUICK_REFERENCE.md  README.md  SESSION_SUMMARY.md  SYNTHESIS.md  verify.sh
butterfly/: BENCHMARKS.md  COMBINATION_PROOFS.md  CONSENSUS.md  EXECUTIVE_SUMMARY.md  FORMAL_SPEC.md  NETWORK_PROTOCOL.md  PROVEIT_INTEGRATION.md  TERMINAL_INTERFACE.md
crates/accessibility/: Cargo.toml
crates/accessibility/src/: audio.rs  description.rs  haptic.rs  lib.rs  spatial_audio.rs
crates/butterfly-coordinator/: Cargo.toml
crates/butterfly-coordinator/src/: main.rs
crates/butterfly-core/: Cargo.toml
crates/butterfly-core/src/: fusion.rs  lib.rs  model_split.rs  worker.rs
crates/butterfly-worker/: Cargo.toml
crates/butterfly-worker/src/: main.rs
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs  main.rs  parser.rs  repl.rs  ui.rs
crates/cli/src/commands/: mod.rs
crates/geometry/: Cargo.toml
crates/geometry/src/: construction.rs  lib.rs  line.rs  point.rs  proof_bridge.rs  spatial.rs
crates/proof-engine/: Cargo.toml
crates/proof-engine/src/: goals.rs  lib.rs  search.rs  tactics.rs  verifier.rs
crates/proveit-accessibility/: Cargo.toml
crates/proveit-accessibility/src/: lib.rs
crates/proveit-core/: Cargo.toml
crates/proveit-core/src/: lib.rs
crates/proveit-formal/: Cargo.toml
crates/proveit-formal/src/: lib.rs
crates/proveit-gpu/: Cargo.toml
crates/proveit-gpu/src/: lib.rs
crates/proveit-spatial/: Cargo.toml
crates/proveit-spatial/src/: lib.rs
crates/proveit-type-checker/: Cargo.toml
crates/proveit-type-checker/src/: lib.rs
crates/sctt-core/: Cargo.toml
crates/sctt-core/benches/: kan_benchmarks.rs
crates/sctt-core/examples/: graph_connectivity.rs  kan_operations.rs
crates/sctt-core/src/: check.rs  eval.rs  kan.rs  lib.rs  normalize.rs  smooth.rs  syntax.rs  value.rs
crates/sctt-core/tests/: kan_integration.rs  kan_properties.rs
docs/: ARCHITECTURAL_ALTERNATIVES.md  NEURAL_HARDWARE_INTEGRATION.md  RESEARCH_QUESTIONS.md  TTT_RESEARCH_PROPOSAL.md
dxt/: .gitignore  CHANGELOG.md  LICENSE  QUICKSTART.md  README.md  USAGE_GUIDE.md  icon-placeholder.md  install.sh  manifest.json  package.json
dxt/src/: index.ts
examples/: basic.rs  prove_o1.rs
src/: lib.rs
swift/ProveItSwift/: Package.swift
swift/ProveItSwift/Sources/ProveItSwift/: ProveItSwift.swift
wasm/: README.md
