[package]
name = "butterfly-coordinator"
version = "0.1.0"
edition = "2021"
authors = ["Alaina Scott <tensorhusker@users.noreply.github.com>"]
license = "MIT"
description = "Coordinator for Butterfly distributed inference network"

[dependencies]
butterfly-core = { path = "../butterfly-core" }
tokio = { version = "1.41", features = ["full"] }
tonic = "0.12"
dashmap = "6.1"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"

[[bin]]
name = "butterfly-coordinator"
path = "src/main.rs"
