[package]
name = "butterfly-core"
version = "0.1.0"
edition = "2021"
authors = ["Alaina Scott <tensorhusker@users.noreply.github.com>"]
license = "MIT"
description = "Core types and algorithms for Butterfly distributed inference"

[dependencies]
# Async runtime
tokio = { version = "1.41", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Networking
tonic = "0.12"
prost = "0.13"

# Utilities
tracing = "0.1"
uuid = { version = "1.11", features = ["serde", "v4"] }
dashmap = "6.1"

[build-dependencies]
tonic-build = "0.12"
