[package]
name = "butterfly-worker"
version = "0.1.0"
edition = "2021"
authors = ["Alaina Scott <tensorhusker@users.noreply.github.com>"]
license = "MIT"
description = "Worker node implementation for Butterfly distributed inference"

[dependencies]
butterfly-core = { path = "../butterfly-core" }
tokio = { version = "1.41", features = ["full"] }
tonic = "0.12"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
num_cpus = "1.16"
sys-info = "0.9"

[[bin]]
name = "butterfly-worker"
path = "src/main.rs"
