[package]
name = "cli"
version = "0.1.0"
edition = "2021"
authors = ["Alaina Scott <tensorhusker@users.noreply.github.com>"]
license = "MIT"
description = "Command-line interface for ProveIt"

[dependencies]
sctt-core = { path = "../sctt-core" }
geometry = { path = "../geometry" }
proof-engine = { path = "../proof-engine" }
accessibility = { path = "../accessibility" }

# CLI framework
clap = { version = "4.5", features = ["derive", "cargo"] }
crossterm = "0.28"
ratatui = "0.29"

# Parsing
pest = "2.7"
pest_derive = "2.7"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Utilities
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.41", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Line editing
rustyline = "14.0"

[[bin]]
name = "proveit"
path = "src/main.rs"

[lib]
name = "cli"
path = "src/lib.rs"
