[package]
name = "geometry"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Geometric construction primitives for ProveIt"

[dependencies]
sctt-core = { path = "../sctt-core" }
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
nalgebra = { version = "0.33", features = ["serde-serialize"] }  # Linear algebra for geometric computations
petgraph = "0.6"   # Graph structures for construction dependencies

[dev-dependencies]
approx = "0.5"  # Floating point comparisons
