[package]
name = "proof-engine"
version = "0.1.0"
edition = "2021"
authors = ["Alaina Scott <tensorhusker@users.noreply.github.com>"]
license = "MIT"
description = "Proof engine for ProveIt formal verification system"

[dependencies]
sctt-core = { path = "../sctt-core" }
geometry = { path = "../geometry" }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Data structures
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
tracing = "0.1"
im = "15.1"  # Persistent data structures for proof state

[dev-dependencies]
proptest = "1.6"
