[package]
name = "sctt-core"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Smooth Cubical Type Theory core implementation"

[dependencies]
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
im = "15.1"  # Persistent data structures for efficient environments
num-rational = "0.4"  # For interval arithmetic
num-traits = "0.2"

[dev-dependencies]
proptest = "1.6"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "kan_benchmarks"
harness = false
